<resources>
    <string name="app_name">Multi App</string>
    <string name="cardTitle">Happy Birthday Raj</string>
    <string name="cardSender">From Rishabh</string>
    <string name="cardMessage">\t\t\t\t\t\t\t\t\t\tWish you a very happy birthday dear, may this year bring blessings and a lots of happiness to you. </string>
    <string name="todo">TODO</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="queTxt">How was the service ?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="ok_15">OK(15%)</string>
    <string name="round_up_txt">Round Up Tip</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="label">textinputEditText</string>
    <string name="description_format">%1$s\n\n%2$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>