<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/costTxt"
            app:layout_constraintBottom_toBottomOf="@+id/costTxt"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/serviceQue"
            app:layout_constraintBottom_toBottomOf="@+id/serviceQue"/>

        <TextView
            android:id="@+id/serviceQue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/queTxt"
            style="@style/Widget.TipTime.TextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/icon_service"
            app:layout_constraintTop_toBottomOf="@+id/costTxt" />
        <RadioGroup
            android:id="@+id/radGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/serviceQue"
            app:layout_constraintTop_toBottomOf="@+id/serviceQue">

            <RadioButton
                android:id="@+id/rd20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"/>
            <RadioButton
                android:id="@+id/rd18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_18"/>
            <RadioButton
                android:id="@+id/rd15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_15"
                android:checked="true"/>

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/swch"
            app:layout_constraintBottom_toBottomOf="@+id/swch"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/round_up_txt"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/icon_tip"
            app:layout_constraintTop_toBottomOf="@+id/radGrp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/clcTip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/serviceQue"
            app:layout_constraintTop_toBottomOf="@+id/swch"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clcTip" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
